# docindex

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: distribute-package.yaml  ruff.yaml  test_cohere_pinecone_indexer.yaml  test_google_pinecone_indexer.yaml  test_openai_pinecone_indexer.yaml  tests.yaml
DOCS/: CONTRIBUTING.md
DocIndex/: create_index.py  index_documents.py
OpenAIPineconeIndex/: index.py  main.py
src/: config.py
src/DocIndex/: doc_indexing.py
src/_cohere/: create_index.py  delete_index.py  doc_index.py  index_documents.py
src/_google/: create_index.py  delete_index.py  doc_index.py  docindex.py  index_documents.py  main.py
src/_openai/: config.py  create_index.py  delete_index.py  doc_index.py  docindex.py  index.py  index_documents.py
src/doc_index/: delete_index.py
src/docindex/: create_index.py  delete_index.py  doc_index.py  index_documents.py
src/tests/: cohereindex_test.py  googleindex_test.py  openaiindex_test.py  test_pineconeindex_cohere.py  test_pineconeindex_google.py  test_pineconeindex_openai.py
src/utils/: config.py  create_index.py  delete_index.py  doc_model.py  rerank.py  response_model.py
tests/: test_pineconeindex_cohere.py  test_pineconeindex_google.py  test_pineconeindex_openai.py
