[metadata]
name = docindex
author = Kevin Kibe
version = 0.3.0
author_email = keviinkibe@gmail.com
description = A package for fast indexing of multiple documents and their metadata on Pinecone.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KevKibe/docindex
license = MIT

[options]
python_requires = >=3.8
packages = find:
install_requires =
    pinecone-client==3.2.2
    tiktoken==0.6.0
    pypdf==4.1.0
    unstructured==0.12.6
    langchain-community==0.0.31
    langchain==0.1.14
    langchain-openai==0.1.1
    langchain-google-genai==1.0.1
    langchain-pinecone==0.1.0
    google.generativeai==0.4.1
package_dir=
    =src

[options.packages.find]
where=src