[metadata]
name = docindex
author = Kevin Kibe
version = 0.6.0
author_email = keviinkibe@gmail.com
description = A package for fast persistent storage of multiple document embeddings and their metadata into Pinecone for production-level RAG.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KevKibe/docindex
license = MIT

[options]
python_requires = >=3.8
packages = find:
install_requires =
    pinecone-client==3.2.2
    tiktoken==0.6.0
    pypdf==4.1.0
    unstructured==0.12.6
    langchain-community==0.0.31
    langchain==0.1.14
    langchain-openai==0.1.1
    langchain-google-genai==1.0.1
    langchain-pinecone==0.1.0
    google.generativeai==0.4.1
    python-dotenv==1.0.1
    python-docx==1.1.0
    markdown==3.6
    langchain-core==0.1.46
    langchain-cohere==0.1.4
package_dir=
    =src

[options.packages.find]
where=src
