[metadata]
name = docindex
author = Kevin Kibe
version = 0.9.0
author_email = keviinkibe@gmail.com
description = A package for fast persistent storage of multiple document embeddings and their metadata into Pinecone for production-level RAG.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KevKibe/docindex
license = MIT

[options]
python_requires = >=3.8
packages = find:
install_requires =
    pinecone-client==3.2.2
    tiktoken==0.7.0
    pypdf==4.1.0
    unstructured==0.14.5
    langchain-community==0.0.31
    langchain==0.1.14
    langchain-openai==0.1.13
    langchain-google-genai==1.0.1
    langchain-pinecone==0.1.0
    google.generativeai==0.4.1
    python-dotenv==1.0.1
    python-docx==1.1.2
    markdown==3.6
    langchain-core==0.1.46
    langchain-cohere==0.1.4
    rerankers[all]==0.2.0
package_dir=
    =src

[options.packages.find]
where=src
